--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
     <% end %>
     
     <meta property="og:title" content="Foxeo" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="Foxeo is a Vimeo's clone and is intended for storing and viewing videos." />
     <meta property="og:url" content="https://foxeo.herokuapp.com/#/" />
     <meta property="og:image" content="<%= image_url('foxeo.png') %>" />  
